--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -2,15 +2,15 @@
 	<div class="content-profile-page">
 	  <div class="profile-user-page card">
 	    <div class="img-user-profile">
-	      <div style="height:16em;width: 100%;overflow: hidden;">
-	      	<img class="profile-bgHome" src="/images/crowd1.jpg" />
+	      <div style="height:25em;width: 100%;overflow: hidden;">
+	      	<img class="profile-bgHome" src="/images/capitol.jpg" />
 	      </div>
-	      <img class="avatar" src="/images/trevor.jpg"/>
+	      <img class="avatar" src="{{member.avatarUrl}}"/>
 	    </div>
 	    <div class="user-profile-data">
 	      <h1>{{member.username}}</h1>
 	      <button class="btn">follow</button><br>
-	      <button class="btn">represent</button><br>
+	      <button class="btn">elect</button><br>
 	    </div>
 	    <ul class="data-user">
 	   		<li><a><strong>{{following.length}}</strong><span>Representing</span></a></li>
@@ -23,9 +23,44 @@
 	</div>
 	<div id="profile-activity">
 
-		<div ng-repeat="vote in votes">
+
+		<md-card ng-repeat="vote in votes">
+			<md-card-title>
+				<md-card-title-text>
+					<p>{{member.username}} voted {{vote.vote}}</p>
+					<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+				</md-card-title-text>
+				<md-card-title-media>
+					<div class="md-media-lg card-media"></div>
+				</md-card-title-media>
+			</md-card-title>
+		</md-card>
+		<!--<div ng-repeat="vote in votes">
 			<p>{{member.username}} voted {{vote.vote}} on <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a></p>
-		</div>
+		</div>-->
 		
+		  
+		  <!--<md-content class="md-padding" layout-xs="column" layout="row">
+		    <div flex-xs="" flex-gt-xs="50" layout="column">
+		      <md-card>
+		        <md-card-title>
+		          <md-card-title-text>
+		            <span class="md-headline">Card with image</span>
+		            <span class="md-subhead">Large</span>
+		          </md-card-title-text>
+		          <md-card-title-media>
+		            <div class="md-media-lg card-media"></div>
+		          </md-card-title-media>
+		        </md-card-title>
+		        <md-card-actions layout="row" layout-align="end center">
+		          <md-button>Action 1</md-button>
+		          <md-button>Action 2</md-button>
+		        </md-card-actions>
+		      </md-card>
+		    </div>
+		  </md-content>-->
+		
+
+
 	</div>
 </div>
