--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -5,7 +5,7 @@
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
                 <text x="960" y="46%" class="medium-text desktop">empowering the internet</text>
                 <text x="960" y="44%" class="medium-text mobile">empowering change</text>
-                <text x="960" y="51%" class="small-text mantra">seeing past partian politics</text>
+                <text x="960" y="51%" class="small-text mantra">seeing past partisan politics</text>
 
                 <text x="960" y="67.5%" class="small-text learn-more">learn more</text>
                 <a href="#about" du-smooth-scroll>
