--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -2,7 +2,7 @@
 .navbar-inverse{background-color:rgba(36,36,46,1);}
 </style>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
