--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -1,12 +1,11 @@
 @import "http://fonts.googleapis.com/css?family=Jura";
 @import "http://fonts.googleapis.com/css?family=Cantarell";
 
-html,body {
+html, body {
   height:100%;
-  font-family:verdana,arial,sans-serif;
+  font-family: verdana,arial,sans-serif;
+  font-weight:100;
   color:#000;
-  margin:0;
-  padding:0;
 }
 
 a {
