--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -62,8 +62,6 @@
 		      </md-card>
 		    </div>
 		  </md-content>-->
-		
-
-
 	</div>
+	<!--<div ng-include="'footer/index.tpl.html'"></div>-->
 </div>
