--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -82,6 +82,7 @@
     <script src="/src/app/bills/index.js"></script>
     <script src="/src/app/committee/index.js"></script>
     <script src="/src/app/committees/index.js"></script>
+    <script src="/src/app/footer/index.js"></script>
     <script src="/src/app/home/index.js"></script>
     <script src="/src/app/intro/index.js"></script>
     <script src="/src/app/login/index.js"></script>
