--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -1,6 +1,9 @@
 <!--if logged in-->
+<md-subheader class="md-no-sticky">committees</md-subheader>
+<md-divider ></md-divider>
+
 <div ng-show="currentUser">
-  <div style="margin-left:20%;margin-right:20%;margin-top:5%">
+  <div style="margin-left:2%;margin-right:2%;">
     <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
       <div class="form-group">
         <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
@@ -20,7 +23,11 @@
     </div>
   </div>
 </div>
-<div ng-click="loadMore()">LOAD MORE</div>
-
+<md-divider ></md-divider>
+<br><br>
+<div ng-click="loadMore()" style="text-align:center">
+  <button class="btn btn-default">LOAD MORE</button>
+</div>
 
 <div style="height:100px;"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
