--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -25,7 +25,7 @@
       </div>
 
       <div id="bills">
-        <h2>bills</h2><hr>
+        <h2><a href="/bills">bills</a></h2><hr>
         <h4>{{billCount}}</h4>
         <div ng-repeat="bill in bills">
           <!--<md-card>
@@ -48,7 +48,7 @@
       </div>
 
       <div id="committees">
-        <h2>committees</h2><hr>
+        <h2><a href="/committees">committees</a></h2><hr>
         <h4>{{committeeCount}}</h4>
         <div ng-repeat="committee in committees">
           <h4><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
