--- a/.tmp/public/styles/css/about.css
+++ b/.tmp/public/styles/css/about.css
@@ -1,7 +1,31 @@
 .about-container{
-	margin-left:15%;
-	margin-right:15%;
 	margin-top:5%;
+}
+#section1{
+  height:300px;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section2{
+  height:300px;
+  background-color:rgb(225,225,225);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section3{
+  height:300px;
+  background-color:rgb(215,215,215);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section4{
+  height:300px;
+  background-color:rgb(225,225,225);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
 }
 
 .img-fill {
