--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -2,53 +2,33 @@
 	<div class="img-fill">
 		<img src="/images/capitol.jpg" alt="">
 		<div class="info">
-      <h3>Empowering the internet</h3>
-      <h3>Seeing past partisan politics</h3>
-      <p>vote and have your voice heard, come together with the collective power of the internet</p>
+      	<h3>Empowering the internet</h3>
+      	<h3>Seeing past partisan politics</h3>
+      	<p>vote and have your voice heard, come together with the collective power of the internet</p>
 		</div>
-	</div>
-</div>   
-<!--<div class="heading-container">
-	<div class="img-fill">
-		<img src="/images/crowd1.jpg" alt="">
-		<div class="info">
-			<h3>Elect, Vote, Create</h3>
-      <h3>Direct Democracy</h3>
-		</div>
-	</div>
-</div>-->
-<!--<div class="heading-container">
-	<div class="img-fill">
-		<img src="/images/crowd.jpg" alt="">
-		<div class="info">
-			<h3>Direct Democracy</h3>
-		</div>
-	</div>
-</div>--> 
-
-<div class="about-container">
-	<div>
-		<h2>the voice of the internet</h2>
-		<p>direct input on policy</p>
-    <br>
-
-		<p>real time voting</p>
-		<p>bylaw generation</p>
-		<p>a political network</p>
-		<p>have your voice be heard through collective decision making</p>
-    <br>
-
-    <p>select others to represent you at any time</p>
-    <p>open ballot elections</p>
-    <br>
-
-		<p>we believe in a free and open internet</p>
-		<p>we believe in direct democracy</p>
-
-	
 	</div>
 </div>
-<div style="height:300px;"></div>
-
+<div class="about-container">
+	<div id="section1">
+		<h2>the voice of the internet</h2>
+		<p>direct input on policy</p>
+		<p>a political network</p>
+	</div>
+	<div id="section2">
+		<p>real time voting</p>
+		<!--<p>bylaw generation</p>-->
+		<!--<p>have your voice be heard through collective decision making</p>-->
+		<p>direct input on policy</p>
+		<!--that matters to you-->
+	</div>
+	<div id="section3">
+	    <p>select others to represent you at any time</p>
+	    <p>continual open ballot elections</p>
+	</div>
+	<div id="section4">
+		<p>we believe in direct democracy</p>
+		<img style="height:64px;" src="images/voetr_icon.png"/>
+	</div>
+</div>
 <div ng-include="'footer/index.tpl.html'"></div>
 
