--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -61,7 +61,7 @@
       </div>
 
       <div id="members">
-        <p>local counties / self governing committees / total members / search</p>
+        <!--<p>local counties / self governing committees / total members / search</p>-->
         <h4>{{userCount}} members</h4><hr>
         <div ng-repeat="user in users">
           <a href="/member/{{user.username}}">{{user.username}}</a>
