--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -34,34 +34,17 @@
 					<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
 				</md-card-title-text>
 				<md-card-title-media>
-					<div class="md-media-lg card-media"></div>
+					<div class="md-media-lg card-media"><img class="avatar" src="{{member.avatarUrl}}"/></div>
 				</md-card-title-media>
 			</md-card-title>
 		</md-card>
-		<div ng-repeat="vote in votes">
+
+
+		<!--<div ng-repeat="vote in votes">
 			<p>{{member.username}} voted {{vote.vote}} on <a href="/bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></p>
-		</div>
+		</div>-->
 		
 		  
-		  <!--<md-content class="md-padding" layout-xs="column" layout="row">
-		    <div flex-xs="" flex-gt-xs="50" layout="column">
-		      <md-card>
-		        <md-card-title>
-		          <md-card-title-text>
-		            <span class="md-headline">Card with image</span>
-		            <span class="md-subhead">Large</span>
-		          </md-card-title-text>
-		          <md-card-title-media>
-		            <div class="md-media-lg card-media"></div>
-		          </md-card-title-media>
-		        </md-card-title>
-		        <md-card-actions layout="row" layout-align="end center">
-		          <md-button>Action 1</md-button>
-		          <md-button>Action 2</md-button>
-		        </md-card-actions>
-		      </md-card>
-		    </div>
-		  </md-content>-->
 	</div>
 	<!--<div ng-include="'footer/index.tpl.html'"></div>-->
 </div>
