--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -59,7 +59,7 @@
 
     <div ng-include="'nav/index.tpl.html'"></div>
     <!--<div class="" ui-view="main" style=""></div>-->
-    <div class="" ui-view="main" style="width:100%;margin:0px;margin-top:50px;"></div>
+    <div ui-view="main" style="width:100%;margin:0px;margin-top:50px;"></div>
     <!--<div ng-include="'footer/index.tpl.html'"></div>-->
 
 
