--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -1,20 +1,7 @@
-<style>
-.footer{
-	min-height:200px;
-	background-color:#414141;
-	padding:50px;
-	color: gray;
-}
-.footer a{
-	color:white;
-	padding:5px;
-}
-</style>
-
 <div class="footer" ng-controller="FooterCtrl">
 	{{date | date:'yyyy'}} <a href="/">voetr</a>
 	<a href="/about">about</a>
 	<a href="/bills">bills</a>
 	<a href="/committees">committees</a>
-	<a href="/">stats</a>
+	<a href="#">votes</a>
 </div>
