--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -44,6 +44,10 @@
                   </a>
                 </md-card-title-text>
               </md-card-title>
+              <md-card-actions layout="row" layout-align="center">
+                <md-button>upvote</md-button>
+                <md-button>downvote</md-button>
+            </md-card-actions>
             </md-card>
           </div>
         </div>
