--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -44,10 +44,12 @@
                   </a>
                 </md-card-title-text>
               </md-card-title>
+              <!--
               <md-card-actions layout="row" layout-align="center">
                 <md-button>upvote</md-button>
                 <md-button>downvote</md-button>
-            </md-card-actions>
+              </md-card-actions>
+              -->
             </md-card>
           </div>
         </div>
@@ -133,5 +135,5 @@
     </div>
   </div>
   <!--/if not logged in-->
-  <div ng-include="'footer/index.tpl.html'"></div>
+  <!--<div ng-include="'footer/index.tpl.html'"></div>-->
 </div>
