--- a/.tmp/public/src/app/committees/index.tpl.html
+++ b/.tmp/public/src/app/committees/index.tpl.html
@@ -30,4 +30,4 @@
 </div>
 
 <div style="height:100px;"></div>
-<div ng-include="'footer/index.tpl.html'"></div>
+<!--<div ng-include="'footer/index.tpl.html'"></div>-->
