--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -95,6 +95,8 @@
     <script src="/src/app/nav/index.js"></script>
     <script src="/src/app/register/index.js"></script>
     <script src="/src/app/search/index.js"></script>
+    <script src="/src/app/vote/index.js"></script>
+    <script src="/src/app/votes/index.js"></script>
     <script src="/src/common/models/bill.js"></script>
     <script src="/src/common/models/comment.js"></script>
     <script src="/src/common/models/committee.js"></script>
