--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -105,6 +105,7 @@
     <script src="/src/common/models/search.js"></script>
     <script src="/src/common/models/user.js"></script>
     <script src="/src/common/models/vote.js"></script>
+    <script src="/src/common/models/voteVote.js"></script>
     <script src="/src/common/services/config.js"></script>
     <script src="/src/common/services/index.js"></script>
     <script src="/src/common/services/lodash.js"></script>
