--- a/.tmp/public/styles/css/intro.css
+++ b/.tmp/public/styles/css/intro.css
@@ -81,7 +81,6 @@
 }
 .intro-container {
     cursor: default;
-    height: 100vh;
     min-height: 100vh;
     z-index: 1;
 }
@@ -143,8 +142,7 @@
 }
 svg {
     width: 100%;
-    height: 100%;
-    //position: absolute;
+    min-height: 100vh;
 }
 svg text {
     text-anchor: middle;
