--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -10,7 +10,7 @@
 
 	<!--if not logged in-->
   <div ng-show="!currentUser">
-    <!--<div ng-include="'intro/index.tpl.html'"></div>-->
+    <div ng-include="'intro/index.tpl.html'"></div>
     <div id="about">
 
       <div id="information">
