--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -1,14 +1,11 @@
-<div class="intro-container">
-    <svg class="intro" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080" width="1920px" height="1080px" preserveAspectRatio="xMidYMid slice">
+<div class="intro-container intro">
+    <svg class="intro" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080" width="100%" height="100%" preserveAspectRatio="xMidYMid slice">
         <defs>
             <mask class="intro-mask" id="intro-mask" x="0" y="0" width="100%" height="100%">
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
                 <text x="960" y="46%" class="medium-text desktop">empowering the internet</text>
                 <text x="960" y="44%" class="medium-text mobile">empowering change</text>
-                <!--<text x="960" y="51%" class="small-text mantra">seeing past partisan politics</text>-->
                 <text x="960" y="51%" class="small-text mantra">direct input on policy</text>
-
-
                 <text x="960" y="67.5%" class="small-text learn-more">learn more</text>
                 <a href="#about" du-smooth-scroll>
                     <svg class="tri-before" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="883px" y="68%" width="150px" height="150px" viewBox="0 0 723 626" enable-background="new 0 0 723 626" xml:space="preserve">
@@ -25,7 +22,7 @@
                 </a>
             </mask>
         </defs>
-        <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
+        <rect class="intro-rect" x="0" y="0" width="100%" height="100%"></rect>
         <a href="#about" class="hvr-bob" du-smooth-scroll>
             <svg class="tri-after" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="883px" y="68%" width="150px" height="150px" viewBox="0 0 723 626" enable-background="new 0 0 723 626" xml:space="preserve">
                 <g>
