--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -35,6 +35,13 @@
                     </div>
                 </div>
             </form>
+
+            <!--
+            <p>facebook</p>
+            <p>google</p>
+            <p>twitter</p>
+            -->
+
         </div>
     </div>
     <hr>
