--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -17,10 +17,14 @@
         <i style="font-size:256px;" class="fa fa-bullhorn"></i>
         <hr>
         <h4>be part of the movement</h4>
+        <!--
         <p>seeing past partisan politics</p>
         <p>crowd-sourced government</p>
+        -->
         <p>continual open ballot elections</p>
+        <!--<p>you have to choose,</p>-->
         <p>direct input on policy</p>
+        <!--<p>as grandular as it goes, voice your opinion on what matters, law</p>-->
         <hr>
         <a href="/about" class="btn btn-default">learn more</a>
         <br>
