--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -22,6 +22,7 @@
         <p>crowd-sourced government</p>
         -->
         <p>continual open ballot elections</p>
+        <!--decision making influnce-->
         <!--<p>you have to choose,</p>-->
         <p>direct input on policy</p>
         <!--<p>as grandular as it goes, voice your opinion on what matters, law</p>-->
