--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -3,7 +3,7 @@
 		<img src="/images/capitol.jpg" alt="">
 		<div class="info">
       	<h3>Empowering the internet</h3>
-      	<h3>Seeing past partisan politics</h3>
+      	<!--<h3>Seeing past partisan politics</h3>-->
       	<p>vote and have your voice heard, come together with the collective power of the internet</p>
 		</div>
 	</div>
@@ -16,9 +16,8 @@
 	<div id="section2">
 		<p>real time voting</p>
 		<!--<p>bylaw generation</p>-->
-		<!--<p>have your voice be heard through collective decision making</p>-->
 		<p>direct input on policy</p>
-		<!--that matters to you-->
+		<p>decision making influence</p>
 	</div>
 	<div id="section3">
 	    <p>select others to represent you at any time</p>
@@ -26,6 +25,7 @@
 	</div>
 	<div id="section4">
 		<p>we believe in direct democracy</p>
+		<!--we believe in fostering engaged communities...-->
 		<img style="height:64px;" src="images/voetr_icon.png"/>
 	</div>
 </div>
