--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -28,7 +28,7 @@
         <!--<p>as grandular as it goes, voice your opinion on what matters, law</p>-->
         <hr>
         <a href="/about" class="btn btn-default">learn more</a>
-        <br>
+        <div style="height:100px;"></div>
       </div>
 
       <div id="register">
