--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -29,6 +29,8 @@
         <hr>
         <a href="/about" class="btn btn-default">learn more</a>
         <div style="height:100px;"></div>
+        <div style="height:100px;"></div>
+        <div style="height:100px;"></div>
       </div>
 
       <div id="register">
